--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,2 +1,6 @@
 bind_addr = ":8080"
 log_level = "debug"
+
+
+[nlab]
+database_url = "host=localhost port=5432 dbname=postgres user=postgres password=postgres sslmode=disable"
